# Rubik-s-Cube-in-OpenGL

./: CMakeLists.txt  Cube.cpp  Cube.h  README.md  Rubik.cpp  Rubik.h  main.cpp
Solver/: cubiecube.cpp  facecube.cpp  prunetable_helpers.cpp  random.cpp  random.h  solve.cpp  solve.h
